<resources>

    <string name="app_name">Popular Movies</string>

    <string name="string_movie_poster">Contains poster of movie</string>

    <string name="string_release_date">Release Date</string>

    <string name="string_release_date_example">13-10-2017</string>

    <string name="string_vote_average">Vote Average</string>

    <string name="string_vote_average_example">7/10</string>

    <string name="string_original_title_example">The Green Poster Man</string>

    <string name="string_overview_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>

    <string name="no_summary_found">No summary was found</string>

    <string name="no_release_date_found">No release date found</string>

    <string name="parcel_movie">PARCEL_MOVIE</string>

    <string name="error_need_internet">This application needs Internet connection to function.</string>

    <string name="pref_sort_popular_key">SORT_POPULARITY</string>

    <string name="pref_sort_favorite_key">SORT_FAVORITE</string>


    <string name="pref_sort_method_key">SORT_METHOD</string>

    //url string to the popular moies from The MovieDB
    <string name="tmdb_sort_popular">https://api.themoviedb.org/3/movie/popular</string>

    <string name="pref_sort_toprated_key">SORT_TOP_RATED</string>

    //url string to the top-rated moies from The MovieDB
    <string name="tmdb_sort_toprated">https://api.themoviedb.org/3/movie/top_rated</string>

    <string name="title_activity_movie_details">Movie Details</string>

    <string name="title_activity_movie_reviews">Movie Reviews</string>

    <string name="title_activity_favorites">Favorite Movies</string>


    <string name="no_data">No Data Found</string>

    <string name="data_found">Data Found</string>

    <string name="teasers">Teaser</string>

    <string name="tmdb_movie_teaser_url">http://api.themoviedb.org/3/movie</string>

    <string name="tmdb_movie_reviews_url">http://api.themoviedb.org/3/movie</string>

    <string name="url_key">teaser_url</string>

    <string name="favorite_movies_bundle_key">Favorites</string>

    <string name="favorite_movie_bunble">Favorites</string>

    <string name="teaser_web">http://www.youtube.com/watch?v=</string>

    <string name="teaser_app">vnd.youtube:</string>

    <string name="reviews">Reviews</string>

    <string name="action_sort">Sort</string>

    <string name="sort_by_popularity">Popular</string>

    <string name="sort_by_rating">Rating</string>

    <string name="sort_by_favorite">Favorite</string>

    <string name="removed_favorite">Removed from favorites</string>

    <string name="content_authority">com.thefuturemarketplace.popularmovies</string>

    <string name="added_favorite">Saved to favorites</string>

    <string name="error_message">
        An error has occurred! Please try again.
    </string>

    <string name="action_bar_favorite">ActionBar Favorite</string>

</resources>
