<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieDetailsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/imageview_moview"
                    android:layout_width="197dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="3"
                    android:contentDescription="@string/string_movie_poster"
                    android:src="@drawable/sample" />

                <LinearLayout
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingEnd="2dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="2dp"
                    android:paddingStart="5dp">

                    <TextView
                        android:id="@+id/textview_release_date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_release_date"
                        android:textSize="@dimen/abc_text_size_medium_material" />

                    <TextView
                        android:id="@+id/textview_release_date_example"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:paddingEnd="2dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="2dp"
                        android:text="@string/string_release_date_example"
                        android:textSize="@dimen/abc_text_size_large_material" />

                    <TextView
                        android:id="@+id/textview_vote_average_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/string_vote_average"
                        android:textSize="@dimen/abc_text_size_medium_material" />

                    <TextView
                        android:id="@+id/textview_vote_average_example"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="2dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="2dp"
                        android:text="@string/string_vote_average_example"
                        android:textSize="@dimen/abc_text_size_large_material" />


                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/favButton"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/favorite_button_selector"
                        app:backgroundTint="@color/colorWhite"
                        app:borderWidth="0dp"
                        app:elevation="4dp"
                        app:layout_anchor="@+id/movieHeader"
                        app:layout_anchorGravity="top|right|end"
                        app:pressedTranslationZ="12dp"
                        app:rippleColor="@android:color/white" />

                    <Button
                        android:id="@+id/button_view_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="See Reviews" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_original_title_example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/string_original_title_example"
                    android:textSize="@dimen/abc_text_size_headline_material" />

                <TextView
                    android:id="@+id/textview_overview_example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_overview_example" />

                <TextView
                    android:id="@+id/textview_teasers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:text="@string/teasers"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/abc_text_size_headline_material" />

                <ImageButton
                    android:id="@+id/imageButton_teaser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_media_play" />

            </LinearLayout>





        </LinearLayout>



    </ScrollView>



</LinearLayout>
